name:                folivora-ge
version:             0.1.0.0
synopsis:            netwire-based game engine
-- description:         
-- homepage:            https://github.com/caryoscelus
license:             GPL-3
license-file:        LICENSE
author:              caryoscelus
maintainer:          caryoscelus@gmx.com
-- copyright:           
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:     base >= 4.5 && < 4.7,
                     colour == 2.3.*,
                     GLFW-b >= 1.2.1,
                     linear == 1.2.*,
                     graphics == 0.0.1,
                     time == 1.4.*,
                     random,
                     mtl,
                     netwire >= 5.0 && < 6.0
  default-language:  Haskell2010
  hs-source-dirs:    src
  exposed-modules:   Game.Folivora.Direction,
                     Game.Folivora.GLFWbWire,
                     Game.Folivora.Input,
                     Game.Folivora.Render,
                     Game.Folivora.TileGrid,
                     Game.Folivora.Utils,
                     Game.Folivora.Wires

flag examples
  description:       build demos
  default:           True

executable folivora-snake
  if !flag(examples)
    buildable:       False
  else
    buildable:       True
    build-depends:   base >= 4.5 && < 4.7,
                     colour == 2.3.*,
                     GLFW-b >= 1.2.1,
                     linear == 1.2.*,
                     graphics == 0.0.1,
                     time == 1.4.*,
                     random,
                     mtl,
                     netwire >= 5.0 && < 6.0,
                     folivora-ge >= 0.1
    default-language:  Haskell2010
    hs-source-dirs:    demos/snake
    main-is:           Main.hs
    ghc-options:       -Wall
