name:                snake
version:             0.1.0.0
synopsis:            snake game
-- description:         
-- homepage:            https://github.com/caryoscelus
license:             GPL-3
license-file:        LICENSE
author:              caryoscelus
maintainer:          caryoscelus@gmx.com
-- copyright:           
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable snake
  build-depends:     base >= 4.5 && < 4.7,
                     colour == 2.3.*,
                     GLFW-b >= 1.2.1,
                     linear == 1.2.*,
                     graphics == 0.0.0,
                     time == 1.4.*,
                     -- JuicyPixels >= 3.1.3,
                     -- OpenGLRaw,
                     mtl,
                     netwire >= 5.0
  default-language:  Haskell2010
  hs-source-dirs:    src
  main-is:           Main.hs
  ghc-options:       -Wall
